# HPE-Project

./: README.md  auth_context.txt  consume.py  ingress.json  ingress.yaml  ingress_json_utf8.json  ingress_utf8.yaml  load-test-2500rps.jmx  load_test.py  query.sql  script.md  seed.sql  test.json  tls.crt  tls.key  truncate-tables.sh  update-kafka-iops.sh
.github/workflows/: deploy.yml
infrastructure/kubernetes/autoscaling/: hpa.yaml
infrastructure/kubernetes/ingress/: api-gateway-ingress.yaml
infrastructure/kubernetes/kafka/: kafka.yaml
infrastructure/kubernetes/monitoring/: alertmanager-config.yaml  payment-alert.yaml
infrastructure/kubernetes/postgres/: pgbouncer.yaml  postgres-shard-init.yaml  postgres-shards.yaml  primary-postgres.yaml
infrastructure/kubernetes/services/: api-gateway-config.yaml  api-gateway.yaml  authorization.yaml  clearing.yaml  persistence-worker.yaml  settlement.yaml
load-testing/: get-10k-test.jmx  mixed-load-test.jmx  post-10k-test.jmx
services/api-gateway/: .gitignore  Dockerfile  README.md  decoded_pass.txt  encoded_pass.txt  pom.xml
services/api-gateway/src/main/java/com/payments/gateway/: ApiGatewayApplication.java
services/api-gateway/src/main/java/com/payments/gateway/config/: KafkaConfig.java  RedisConfig.java  WebConfig.java
services/api-gateway/src/main/java/com/payments/gateway/controller/: PaymentController.java  PaymentMethodController.java  RefundController.java  TransactionController.java  UserController.java
services/api-gateway/src/main/java/com/payments/gateway/dto/: AddPaymentMethodRequest.java  AddPaymentMethodResponse.java  PaymentInitiatedEvent.java  PaymentMethodDTO.java  PaymentRequest.java  PaymentResponse.java  RefundRequestDTO.java  RefundResponseDTO.java  RefundStatusDTO.java  TransactionDTO.java  UserDTO.java
services/api-gateway/src/main/resources/: application.yml
services/authorization-service/: CMakeLists.txt  Dockerfile
services/authorization-service/include/: AuthorizationEngine.h  Config.h  ConnectionPool.h  KafkaConsumer.h  KafkaProducer.h  PaymentModels.h  ThreadPool.h
services/authorization-service/src/: main.cpp
services/authorization-service/src/config/: Config.cpp
services/authorization-service/src/kafka/: KafkaConsumer.cpp  KafkaProducer.cpp
services/authorization-service/src/services/: AuthorizationEngine.cpp  ConnectionPool.cpp
services/clearing-service/: Dockerfile  pom.xml
services/clearing-service/src/main/java/com/payments/clearing/: Application.java
services/clearing-service/src/main/resoruces/: application.yml
services/clearing-service/src/main/resources/: application.yml
services/settlement-service/: CMakeLists.txt  Dockerfile
services/settlement-service/src/: main.cpp
services/settlement-service/src/config/: KafkaSettings.h
services/settlement-service/src/kafka/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h
services/settlement-service/src/services/: SettlementService.cpp  SettlementService.h
tests/: load-test.jmx  mixed-load-test.jmx
tests/load/: k6-load-test.js
workers/persistence-worker/: Dockerfile  pom.xml
workers/persistence-worker/src/main/java/com/payments/persistence/: Application.java
workers/persistence-worker/src/main/resources/: application.yml
(+16 files in other folders)
